[package]
name = "saute"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
freetype-rs = "0.32.0"

[dependencies.sdl2]
version = "0.35.2"
default_features = true
features = ["bundled","static-link"]
